--- a/index.html
+++ b/index.html
@@ -68,12 +68,19 @@
         <br>
         <h2>Games</h2>
         <a class="aTag" href="https://studio.code.org/projects/applab/w25udyXVa-3auv8KvCui1qO3NkjDzAwGUSoPio7YLtg"><img src="study=play_image.PNG"></a>
+        <a class="aTag" href="https://studio.code.org/projects/applab/lrUSMthL5jso5PtAOnmQnimkjQg-o3fsgXL8HL11OG4"><img src</a>
 
         <br>
         <br>
         <h2>Chatbots</h2>
         <iframe allow="microphone;" width="500" height="900" src="https://console.dialogflow.com/api-client/demo/embedded/a148bcf0-8737-4571-984d-1a00d1a78747">
         </iframe>
+        <br>
+
+        <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/0c8093c3-3b60-48d6-a8dc-5a05e284e8c6">
+        </iframe>
+        
+
 
 
 
